// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BillingDialogPaymentMethod Button Renders the component 1`] = `
<fragment-stub><button type="button" class="primary v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default" data-test="show-btn"><span class="v-btn__content">
    subscribe
  </span></button>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`BillingDialogPaymentMethod Dialog Subscription Renders the component 1`] = `
<fragment-stub><button type="button" class="primary v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default" data-test="show-btn"><span class="v-btn__content">
    subscribe
  </span></button>
  <div class="v-dialog__container"></div>
</fragment-stub>
`;

exports[`BillingDialogPaymentMethod Dialog Update Renders the component 1`] = `
<fragment-stub><button type="button" class="primary v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default" data-test="show-btn"><span class="v-btn__content">
    add card
  </span></button>
  <div class="v-dialog__container"></div>
</fragment-stub>
`;
